Correccion link de API (MACRO)

--- a/petrobras/slider.html
+++ b/petrobras/slider.html
@@ -10,7 +10,7 @@
     <script type="text/javascript">
         function adfOpenGlobalClickTAG() {
             var adfClickTAGName = 'clickTAG',
-                adfClickTAGUrl = 'http://www.petrobras.com/es/paises/colombia/promociones/';
+                adfClickTAGUrl = '%%c1;cpdir=';
 
             window.open(dhtml.getVar(adfClickTAGName, adfClickTAGUrl), dhtml.getVar('landingPageTarget', '_blank'));
         }
