Correccion de MACRO

--- a/petrobras/slider.html
+++ b/petrobras/slider.html
@@ -10,7 +10,7 @@
     <script type="text/javascript">
         function adfOpenGlobalClickTAG() {
             var adfClickTAGName = 'clickTAG',
-                adfClickTAGUrl = '%%c1;cpdir=';
+                adfClickTAGUrl = 'http://www.petrobras.com/es/paises/colombia/promociones/';
 
             window.open(dhtml.getVar(adfClickTAGName, adfClickTAGUrl), dhtml.getVar('landingPageTarget', '_blank'));
         }
@@ -171,7 +171,7 @@
 </head>
 <body class="InkabetSlide" style="margin:0px;">
 	 <div class="te-container">
-		<a href="http://www.petrobras.com/es/paises/colombia/promociones/" target="_blank">
+		<a href="%%c1;cpdir=" target="_blank">
 			<div id="te-wrapper" class="te-wrapper">
 				<div class="te-images">
 					<img src="https://i.imgur.com/pDY5rLR.jpg" alt="" />
