--- a/petrobras/fade.html
+++ b/petrobras/fade.html
@@ -11,7 +11,7 @@
     <script type="text/javascript">
         function adfOpenGlobalClickTAG() {
             var adfClickTAGName = 'clickTAG',
-                adfClickTAGUrl = '%%c1;cpdir=';
+                adfClickTAGUrl = 'http://www.petrobras.com/es/paises/colombia/promociones/';
 
             window.open(dhtml.getVar(adfClickTAGName, adfClickTAGUrl), dhtml.getVar('landingPageTarget', '_blank'));
         }
@@ -305,7 +305,7 @@
 
 <body class="PetrobrasFade" style="margin:0px;">
    <div class="bzm_wrapper carousel-wrapper size_300x250">
-        <a href="http://www.petrobras.com/es/paises/colombia/promociones/" style="display: block;" target="_blank">
+        <a href="%%c1;cpdir=" style="display: block;" target="_blank">
             <div class="carousel-container">
                 <div class="bzm_cover bg cover-1 carousel-item1 item-1"></div>
                 <div class="bzm_cover bg cover-2 carousel-item1 item-2"></div>
