Added color black in description text

--- a/Telmex/fade.html
+++ b/Telmex/fade.html
@@ -328,7 +328,7 @@
                 ¿Sabes  lo  que  es  la  Deep Web  y  la  Dark  Web?  Evite  daños  en  la  reputación  de  su empresa
             </span>
             <br/>  
-            <span class="tgx_text_light tgx_text_small">
+            <span class="tgx_text_light tgx_text_small" style="color:black;">
                 <p>
                     La  Ciberinteligencia  se  centra  en  lo  que  sucede  fuera  de  su  red,  es  decir,  en  el  monitoreo  de  fuentes  abiertas,  como  la  Deep  Web,  Dark  Web  y  el  Internet  de  las cosas. <br>Para  ello  se  utilizan  diversos  mecanismos,  con  el  fin  de  identificar  y  anticiparse  a  las  posibles  amenazas.
                 </p> 
