Added CTA button and fixed texts

--- a/Telmex/fade.html
+++ b/Telmex/fade.html
@@ -81,8 +81,10 @@
             z-index: 2;
             margin-left: 50%;
             left: -30px;
-                        padding: 5px;
-            border-radius: 2px
+            background-color: #3399FE;
+            padding: 5px;
+            border-radius: 20px;
+            text-align: center;
         }
 
         .tgx_cover .tgx_logo span {
@@ -123,8 +125,8 @@
 
         .tgx_text {
             position: absolute;
-            top: 49%;
-            left: 0px;
+            top: 54%;
+            left: 7.5px;
             width: 98%;
             padding: 0.3em;
             line-height: 1.4em;
@@ -132,7 +134,7 @@
         }
 
         .tgx_text_title {
-            font-size: 120%;
+            font-size: 90%;
             color: #453936;
             display: inline-block;
             width: 100%;
@@ -152,7 +154,7 @@
         }
 
         .tgx_text_small {
-            font-size: 80%;
+            font-size: 75%;
         }
 
         ul {
@@ -318,13 +320,13 @@
     <div class="tgx_wrapper carousel-wrapper size_320x480" id="cta" onclick="openUrl();">
        
         <div class="tgx_cover bg cover-1 carousel-item item-1">
-            <div class="tgx_logo"></div>
+            <div class="tgx_logo"><span class="tgx_text_bold tgx_text_small">Más info</span></div>
         </div>
         <div class="tgx_cover bg cover-2 carousel-item item-2">
-            <div class="tgx_logo"></div>
+            <div class="tgx_logo"><span class="tgx_text_bold tgx_text_small">Más info</span></div>
         </div>
         <div class="tgx_cover bg cover-3 carousel-item item-3">
-            <div class="tgx_logo"></div>
+            <div class="tgx_logo"><span class="tgx_text_bold tgx_text_small">Más info</span></div>
         </div>
         <div class="tgx_text"> 
             <span class="tgx_text_title tgx_text_bold">
@@ -332,7 +334,7 @@
             </span>
             <br/>  
             <span class="tgx_text_light tgx_text_small" style="color:black;">
-                <p>
+                <p style="margin-right:10px;">
                     La  Ciberinteligencia  se  centra  en  lo  que  sucede  fuera  de  su  red,  es  decir,  en  el  monitoreo  de  fuentes  abiertas,  como  la  Deep  Web,  Dark  Web  y  el  Internet  de  las cosas. <br>Para  ello  se  utilizan  diversos  mecanismos,  con  el  fin  de  identificar  y  anticiparse  a  las  posibles  amenazas.
                 </p> 
             </span> 
