--- a/Telmex/video.html
+++ b/Telmex/video.html
@@ -54,7 +54,7 @@
             position: relative;
             width: 100%;
             height: 50%;
-            margin-top: -76.5%;
+            margin-top: -1.5%;
         }
 
         .bg.cover-1 {
@@ -263,7 +263,7 @@
 </head>
 
 <body class="tgx">
-    <div class="tgx_wrapper carousel-wrapper size_320x480" id="cta" onclick="openUrl();">
+    <div class="tgx_wrapper carousel-wrapper size_320x480" id="cta">
         <div class="carousel-container">
             <div style="text-align:center;">
                 <script>
@@ -275,7 +275,7 @@
                 </script>
             </div>
         </div>
-       
+        <div onclick="openUrl();">
         <div class="tgx_cover">
             <div class="tgx_logo"><span class="tgx_text_bold tgx_text_small">Más info</span></div>
         </div>
@@ -314,6 +314,7 @@
                     <img src="https://i.imgur.com/ni6VORO.jpg" style="height:30px">
                 </div>
             </div>
+        </div>
         </div>
     </div>
 </body>
