--- a/bancolombia/slider.html
+++ b/bancolombia/slider.html
@@ -187,7 +187,7 @@
 </head>
 <body class="AmericanSlide" style="margin:0px;">
 	 <div class="te-container">
-        <a href="http://www.lg.com/pe" target="_blank">
+        <a href="https://www.grupobancolombia.com/wps/portal/personas" target="_blank">
             <div id="te-wrapper" class="te-wrapper">
                 <div class="te-images"> <img src="https://i.imgur.com/iPumVps.jpg" alt="" /> <img src="https://i.imgur.com/7hfgK34.jpg" alt="" /> <img src="https://i.imgur.com/JtZRzUQ.jpg" alt="" /> </div>
                 <div class="te-cover"> <img src="https://i.imgur.com/iPumVps.jpg" alt="" /> </div>
