--- a/bancolombia/fijo.html
+++ b/bancolombia/fijo.html
@@ -10,7 +10,7 @@
     <script type="text/javascript">
         function adfOpenGlobalClickTAG() {
             var adfClickTAGName = 'clickTAG',
-                adfClickTAGUrl = 'http://www.sky.com.mx/contrata/pdi/#utm_source=mosaic&utm_medium=creativa_int';
+                adfClickTAGUrl = 'https://www.grupobancolombia.com/wps/portal/personas';
 
             window.open(dhtml.getVar(adfClickTAGName, adfClickTAGUrl), dhtml.getVar('landingPageTarget', '_blank'));
         }
@@ -233,7 +233,7 @@
 
 <body class="RusiaFijo1" style="margin:0px;">
     <div class="te-container">
-        <a href="%%c1;cpdir=" target="_blank">
+        <a href="https://www.grupobancolombia.com/wps/portal/personas" target="_blank">
             <div id="te-wrapper" class="te-wrapper">
                 <div class="te-images"> <img src="https://i.imgur.com/XwbKSj5.jpg" alt="" /> <img src="https://i.imgur.com/XwbKSj5.jpg" alt="" /> <img src="https://i.imgur.com/XwbKSj5.jpg" alt="" /> </div>
                 <div class="te-cover"> <img src="https://i.imgur.com/RI0183a.gif" alt="" /> </div>
