Added Video Aeromar format

--- a/Aeromar/video.html
+++ b/Aeromar/video.html
@@ -125,7 +125,7 @@
 
         .tgx_text {
             position: absolute;
-            top: 47.5%;
+            top: 45%;
             left: 5px;
             width: 98%;
             padding: 0.3em;
@@ -134,7 +134,7 @@
         }
 
         .tgx_text_title {
-            font-size: 125%;
+            font-size: 150%;
             color: #453936;
             display: inline-block;
             width: 110%;
@@ -190,7 +190,7 @@
             float: right;
             height: 30px;
             text-align: center;
-            margin-top: 55px;
+            margin-top: 5px;
             margin-right: 10px
         }
         
@@ -257,7 +257,7 @@
     </style>
     <script>
         function openUrl() {
-            window.open("http://telmex.com/web/empresas/wifi-negocio-avanzado");
+            window.open("https://www.aeromar.com.mx");
         }
     </script>
 </head>
@@ -281,11 +281,13 @@
         </div>
            
         <div class="tgx_text">
-            <span class="tgx_text_light" style="color:black; margin-right: 15px; font-size:122%;">
-               Porque para disfrutar la <strong>esencia de México</strong> hay que ir a lo más profundo de nuestro territorio y conectar con el corazón de las personas.
-            </span>
-            <span class="tgx_text_title tgx_text_bold" style="margin-top:30px;">
+            <span class="tgx_text_title tgx_text_bold" style="margin-top:0px; margin-bottom: 20px;">
                 Conocemos la esencia de México
+            </span>
+            <span class="tgx_text_light" style="color:black; margin-right:15px; font-size:100%;">
+               Porque para disfrutar la <strong>esencia de México</strong> hay que ir a lo más profundo de nuestro territorio y conectar con el corazón de las personas. 
+               <br><br>
+               No te conformes con menos. Vive la esencia. ¡Vive México!
             </span>
 
             <div style="bottom:0px;height: 1px;text-align:left;margin-top:2.5%">
