Changed Fade Aeromax format

--- a/Aeromar/fade.html
+++ b/Aeromar/fade.html
@@ -57,18 +57,18 @@
         }
 
         .bg.cover-1 {
-            background: url("https://i.imgur.com/NbwCx2N.png");
+            background: url("https://i.imgur.com/t2Y7u2j.jpg");
             background-size: cover;
         }
 
         .bg.cover-2 {
-            background: url("https://i.imgur.com/0nAnOae.jpg");
+            background: url("https://i.imgur.com/TZUJiXq.jpg");
             background-size: cover;
             background-position-x: 40%;
         }
 
         .bg.cover-3 {
-            background: url("https://i.imgur.com/ILYCJAJ.jpg");
+            background: url("https://i.imgur.com/xm2BCve.jpg");
             background-size: cover;
             background-position-x: -40px;
         }
@@ -134,7 +134,7 @@
         }
 
         .tgx_text_title {
-            font-size: 90%;
+            font-size: 125%;
             color: #453936;
             display: inline-block;
             width: 100%;
@@ -304,14 +304,14 @@
             float: right;
             height: 30px;
             text-align: center;
-            margin-top: -5px;
-            margin-right: -20px
+            margin-top: 5px;
+            margin-right: 10px
         }
 
     </style>
     <script>
         function openUrl() {
-            window.open("http://telmex.com/web/empresas/ciberinteligencia");
+            window.open("https://www.aeromar.com.mx");
         }
     </script>
 </head>
@@ -329,30 +329,18 @@
             <div class="tgx_logo"><span class="tgx_text_bold tgx_text_small">Más info</span></div>
         </div>
         <div class="tgx_text"> 
-            <span class="tgx_text_title tgx_text_bold">
-                ¿Sabes  lo  que  es  la  Deep Web  y  la  Dark  Web?  Evite  daños  en  la  reputación  de  su empresa
+            <span class="tgx_text_title tgx_text_bold" style="margin-top:0px; margin-bottom: 10px;">
+                Conocemos la esencia de México
             </span>
-            <br/>  
-            <span class="tgx_text_light tgx_text_small" style="color:black;">
-                <p style="margin-right:10px;">
-                    La  Ciberinteligencia  se  centra  en  lo  que  sucede  fuera  de  su  red,  es  decir,  en  el  monitoreo  de  fuentes  abiertas,  como  la  Deep  Web,  Dark  Web  y  el  Internet  de  las cosas. <br>Para  ello  se  utilizan  diversos  mecanismos,  con  el  fin  de  identificar  y  anticiparse  a  las  posibles  amenazas.
-                </p> 
-            </span> 
+            <span class="tgx_text_light" style="color:black; margin-right:15px; font-size:90%;">
+               Porque para disfrutar la <strong>esencia de México</strong> hay que ir a lo más profundo de nuestro territorio y conectar con el corazón de las personas. 
+               <br><br>
+               No te conformes con menos. Vive la esencia. ¡Vive México!
+            </span>
+            
             <div style="bottom:0px;height: 1px;text-align:left;margin-top:1.5%">
-                    <div id="botones-para-compartir" style="display:inline;float:left;margin-left:4px;margin-top:0px;">
-                        <span>  
-                            <a class="shared" href="https://www.facebook.com/sharer/sharer.php?u=http://telmex.com/web/empresas/ciberinteligencia"  target="block">    
-                            <img alt="compartir en facebook" class="facebooki" height="22" src="http://4.bp.blogspot.com/-2W3Fr7nS-T0/Uh1HrkLe5wI/AAAAAAAAAiQ/0-_aC8Yici4/s1600/facebook.png" title="compartir en facebook" width="22" /></a>
-
-                                <a class="shared" href="https://plus.google.com/share?url=http://telmex.com/web/empresas/ciberinteligencia" target="block">
-                                <img alt="compartir en google+" class="googlei" height="22" src="http://3.bp.blogspot.com/-Ioy5JWv_nwk/Uh1HlxE8urI/AAAAAAAAAhc/q_uUabDAhsU/s1600/Google%252B%2Balt.png" title="compartir en google+" width="22" /></a>
-
-                                <a class="shared" href="https://twitter.com/home?status=http://telmex.com/web/empresas/ciberinteligencia" target="block">
-                                <img alt="compartir en twitter" class="twitteri" height="22" src="http://3.bp.blogspot.com/-TgonF6vzJs0/Uh1Hmxqk8aI/AAAAAAAAAiA/MdT4pRWKRbI/s1600/twitter.png" title="compartir en twitter" width="22" /></a>
-                        </span>
-                    </div>
                     <div class="logo">
-                        <img src="https://i.imgur.com/ni6VORO.jpg" style="height:30px">
+                        <img src="https://i.imgur.com/C9AVxxG.png" style="height:16px">
                     </div>
                 </div>
         
