Changed Margin right format

--- a/Aeromar/fade.html
+++ b/Aeromar/fade.html
@@ -131,6 +131,7 @@
             padding: 0.3em;
             line-height: 1.4em;
             color: #453936;
+            margin-right: 20px;
         }
 
         .tgx_text_title {
@@ -332,7 +333,7 @@
             <span class="tgx_text_title tgx_text_bold" style="margin-top:0px; margin-bottom: 10px;">
                 Conocemos la esencia de México
             </span>
-            <span class="tgx_text_light" style="color:black; margin-right:15px; font-size:90%;">
+            <span class="tgx_text_light" style="color:black; font-size:90%;">
                Porque para disfrutar la <strong>esencia de México</strong> hay que ir a lo más profundo de nuestro territorio y conectar con el corazón de las personas. 
                <br><br>
                No te conformes con menos. Vive la esencia. ¡Vive México!
