--- a/LG/Video.html
+++ b/LG/Video.html
@@ -70,9 +70,9 @@
 				
 			</div>
 
-			<div style="bottom:0px;height: 18px;text-align:right;margin-top:5px;">
-			<img src="https://i.imgur.com/tI2G7d1.png" style="height:34px; margin-top:5px">
-				<div id="botones-para-compartir" style="display:inline;float:left;margin-left:7px;margin-top:-35px;">
+			<div style="bottom:0px;height: 18px;text-align:right;margin-top:25px;">
+			<img src="https://i.imgur.com/tI2G7d1.png" style="height:34px; margin-top:0px; margin-right:5px;">
+				<div id="botones-para-compartir" style="display:inline;float:left;margin-left:7px;margin-top:-30px;">
 						<span>  
 							<a class="shared" href="https://www.facebook.com/sharer/sharer.php?u=http://www.lg.com/pe"  target="block">    
 							<img alt="compartir en facebook" class="facebooki" height="22" src="http://4.bp.blogspot.com/-2W3Fr7nS-T0/Uh1HrkLe5wI/AAAAAAAAAiQ/0-_aC8Yici4/s1600/facebook.png" title="compartir en facebook" width="22" /></a>
