Added Final text in High Video format

--- a/LG/videoHigh.html
+++ b/LG/videoHigh.html
@@ -112,7 +112,7 @@
 
         .tgx_text {
             position: absolute;
-            top: 43.5%;
+            top: 41.5%;
             left: 5px;
             width: 98%;
             padding: 0.3em;
@@ -269,11 +269,11 @@
            
         <div class="tgx_text"> 
             <span class="tgx_text_title tgx_text_bold">
-                Por qué crees que ellos lo usan?
+                ¿Por qué crees que ellos lo usan?
             </span>
             <span class="tgx_text_light tgx_text_small" style="color:black;">
                 Estas son las 7 razones por la que ellos lo tienen:
-                <ol style="margin-top:5px; margin-bottom:0px;">
+                <ol style="margin-top:-2px; margin-bottom:0px;">
                    <li>AI CAM</li>
                    <li>Google Lens</li>
                    <li>Boombox Speaker</li>
@@ -282,9 +282,10 @@
                    <li>Super Bright Display</li>
                    <li>Super Far Field Voice Recognition</li>
                 </ol>
+                ¿Cual es la tuya?
             </span>
 
-            <div style="bottom:0px;height: 1px;text-align:left;margin-top:5%">
+            <div style="bottom:0px;height: 1px;text-align:left;margin-top:2.5%">
                 <div id="botones-para-compartir" style="display:inline;float:left;margin-left:4px;margin-top:0px;">
                     <span>  
                         <a class="shared" href="https://www.facebook.com/sharer/sharer.php?u=http://www.lg.com/pe"  target="block">    
