--- a/LG/Cube.html
+++ b/LG/Cube.html
@@ -558,10 +558,10 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 #i24 { position: absolute; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Source Sans Pro"; font-size: 24px; color: #666666; font-weight: bold; font-style: normal; text-decoration: none; text-align: left; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(255,255,255,0); margin-top: -3px; margin-left: 5px;}
 /*#/#*//*#i24.i25.positioning.css:positioning/base/css.1*/
 #i24 { position: absolute; top: 50%; left: 50%; overflow: hidden; width: 284px; height: 49px;
-        -ms-transform: translate(-50%, -50%) translate(-2px, 64px) rotate(0deg);
-        -webkit-transform: translate(-50%, -50%) translate(-2px, 64px) rotate(0deg);
-        -moz-transform: translate(-50%, -50%) translate(-2px, 64px) rotate(0deg);
-        transform: translate(-50%, -50%) translate(-2px, 64px) rotate(0deg);
+        -ms-transform: translate(-50%, -50%) translate(-4px, 64px) rotate(0deg);
+        -webkit-transform: translate(-50%, -50%) translate(-4px, 64px) rotate(0deg);
+        -moz-transform: translate(-50%, -50%) translate(-4px, 64px) rotate(0deg);
+        transform: translate(-50%, -50%) translate(-4px, 64px) rotate(0deg);
 }
 /*#/#*//*#i5.i185.image.css:image/base/css*/
 #i185 { opacity: 1; }
@@ -795,7 +795,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
     <!--#i4.i20.shape.html:shape/html-->
 <div id="i20"></div>
 <!--#/#--><!--#i4.i14.text.html:text/html-->
-<div id="i14">Ellos ya lo tienen. Y tu, ¿a qué esperas?</div>
+<div id="i14">Ellos ya lo tienen. Y tu, ¿A qué esperas?</div>
 <!--#/#--><!--#i4.i130.image.html:image/html-->
 <img id="i130" src="https://i.imgur.com/F8gPcU5.jpg"/>
 <!--#/#--><!--#i4.i181.image.html:image/html-->
@@ -809,7 +809,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
     <!--#i5.i30.shape.html:shape/html-->
 <div id="i30"></div>
 <!--#/#--><!--#i5.i24.text.html:text/html-->
-<div id="i24">Ellos ya lo tienen. Y tu, ¿a qué esperas?</div>
+<div id="i24">Ellos ya lo tienen. Y tu, ¿A qué esperas?</div>
 <!--#/#--><!--#i5.i185.image.html:image/html-->
 <img id="i185" src="https://i.imgur.com/tI2G7d1.png"/>
 <!--#/#--><!--#i5.i193.image.html:image/html-->
@@ -823,7 +823,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
     <!--#i6.i40.shape.html:shape/html-->
 <div id="i40"></div>
 <!--#/#--><!--#i6.i34.text.html:text/html-->
-<div id="i34">Ellos ya lo tienen. Y tu, ¿a qué esperas?</div>
+<div id="i34">Ellos ya lo tienen. Y tu, ¿A qué esperas?</div>
 <!--#/#--><!--#i6.i60.image.html:image/html-->
 <img id="i60" src="https://i.imgur.com/heAqLJC.jpg"/>
 <!--#/#--><!--#i6.i187.image.html:image/html-->
