--- a/LG/Video.html
+++ b/LG/Video.html
@@ -24,7 +24,7 @@
 		.Adidas1Video .bzm_pos_bl{bottom:3%;left:3%}
 		.Adidas1Video .bzm_pos_br{bottom:3%;right:3%}
 		.Adidas1Video .bzm_pos_bm{bottom:3%;left:calc(100% - 70%)}
-		.Adidas1Video .bzm_text{padding:6px 0 10px .3em;line-height:1.1;color:#000;}
+		.Adidas1Video .bzm_text{margin-top: 10px; padding:6px 0 10px .3em;line-height:1.1;color:#000;}
 		.Adidas1Video .bzm_text_title{font-size:14px;color:#000;}
 		.Adidas1Video .bzm_text_light{font-size:10px;font-weight:0}
 		.Adidas1Video .bzm_text_medium{font-size:15px;font-weight:500;line-height:1.4}
@@ -70,7 +70,7 @@
 				
 			</div>
 
-			<div style="bottom:0px;height: 18px;text-align:right;margin-top:25px;">
+			<div style="bottom:0px;height: 18px;text-align:right;margin-top:20px;">
 			<img src="https://i.imgur.com/tI2G7d1.png" style="height:34px; margin-top:0px; margin-right:5px;">
 				<div id="botones-para-compartir" style="display:inline;float:left;margin-left:7px;margin-top:-30px;">
 						<span>  
