Fixed Cube clicktags and Margins in video format

--- a/LG/Cube.html
+++ b/LG/Cube.html
@@ -880,50 +880,22 @@ document.getElementById('i91').addEventListener('click', function(e){
     window.mraid ? mraid.open(Adform.getClickURL('clickTAG')) : window.open(dhtml.getVar('clickTAG', 'http://www.lg.com/pe'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
-/*#/#*//*#i4.i50.actions.js:actions/base/js*/
-/* Name: On Click; */
-document.getElementById('i4').addEventListener('click', function(e){
-    /*#i50.i51.actions-clicktag.js:actions-clicktag/base/js.1*/
-    window.mraid ? mraid.open(Adform.getClickURL('')) : window.open(dhtml.getVar('', ''), dhtml.getVar('landingPageTarget', '_blank'));
-/*#/#*/
-});
-/*#/#*//*#i5.i185.image.js:image/base/js*/
-
-/*#/#*//*#i5.i193.image.js:image/base/js*/
 
 /*#/#*//*#i95.i189.actions.js:actions/base/js*/
 /* Name: On Click; */
 document.getElementById('i95').addEventListener('click', function(e){
     /*#i189.i190.actions-clicktag.js:actions-clicktag/base/js.1*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG')) : window.open(dhtml.getVar('clickTAG', 'http://www.lg.com/pe'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG2')) : window.open(dhtml.getVar('clickTAG2', 'http://www.lg.com/pe'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
-/*#/#*//*#i5.i52.actions.js:actions/base/js*/
-/* Name: On Click; */
-document.getElementById('i5').addEventListener('click', function(e){
-    /*#i52.i53.actions-clicktag.js:actions-clicktag/base/js.1*/
-    window.mraid ? mraid.open(Adform.getClickURL('')) : window.open(dhtml.getVar('', ''), dhtml.getVar('landingPageTarget', '_blank'));
-/*#/#*/
-});
-/*#/#*//*#i6.i60.image.js:image/base/js*/
-
-/*#/#*//*#i6.i187.image.js:image/base/js*/
 
 /*#/#*//*#i99.i191.actions.js:actions/base/js*/
 /* Name: On Click; */
 document.getElementById('i99').addEventListener('click', function(e){
     /*#i191.i192.actions-clicktag.js:actions-clicktag/base/js.1*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG')) : window.open(dhtml.getVar('clickTAG', 'http://www.lg.com/pe'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG3')) : window.open(dhtml.getVar('clickTAG3', 'http://www.lg.com/pe'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
-/*#/#*//*#i6.i54.actions.js:actions/base/js*/
-/* Name: On Click; */
-document.getElementById('i6').addEventListener('click', function(e){
-    /*#i54.i55.actions-clicktag.js:actions-clicktag/base/js.1*/
-    window.mraid ? mraid.open(Adform.getClickURL('')) : window.open(dhtml.getVar('', ''), dhtml.getVar('landingPageTarget', '_blank'));
-/*#/#*/
-});
-/*#/#*/
 
   function next(){
              cube_i2.rotate(cube_i2.ROTATE_NEXT)
