Fixed Text and video dimensions in videohigh format

--- a/PlazaCentral/videoHigh.html
+++ b/PlazaCentral/videoHigh.html
@@ -141,7 +141,7 @@
         }
 
         .tgx_text_small {
-            font-size:65.5%;
+            font-size:80%;
         }
 
         ul {
@@ -256,7 +256,7 @@
                 <script>
                     var playersrc;
                 </script>
-                <iframe class="yt560x315" id="JSytplayer" width="320" height="194" src="https://www.youtube.com/embed/Ear0v7ZFUmM?rel=0&autoplay=1&modestbranding=0&loop=1&controls=0&mute=1" onmouseover="this.src=playersrc+'=0'" onmouseout="this.src=playersrc" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+                <iframe class="yt560x315" id="JSytplayer" width="320" height="187" src="https://www.youtube.com/embed/Ear0v7ZFUmM?rel=0&autoplay=1&modestbranding=0&loop=1&controls=0&mute=1" onmouseover="this.src=playersrc+'=0'" onmouseout="this.src=playersrc" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
                 <script>
                     playersrc = document.getElementById('JSytplayer').src;
                 </script>
@@ -272,11 +272,11 @@
                 ¿Queres probar algo DeliZioso?
             </span>
             <span class="tgx_text_light tgx_text_small" style="color:black;">
-                <p style="margin-top: 0px;">Quizás aún no sea muy conocido pero en el centro comercial Plaza Central existe un concepto de gastronomía innovador y revolucionario. </p> <p style="margin-top: -5px;">Se trata de una opción dual compuesta por una Plaza de Comidas y <strong>DELIZIA</strong>, un paseo de restaurantes con lo mejor de la mesa local e internacional, cuyo servicio a la mesa es impecable y especializado.</p> <p style="margin-top: -5px;">Para la comodidad de quienes disfruten de esta oferta gastronómica, han sido dispuestos 400 parqueaderos con acceso directo a la zona.</p>
+                <p style="margin-top: 7.5px;">Quizás aún no sea muy conocido pero en el centro comercial Plaza Central existe un concepto de gastronomía innovador y revolucionario. </p> <p style="margin-top:10px;">Se trata de una opción dual compuesta por una Plaza de Comidas y <strong>DELIZIA</strong>, un paseo de restaurantes con lo mejor de la mesa local e internacional, cuyo servicio a la mesa es impecable y especializado.</p>
             </span>
 
-            <div style="bottom:0px;height: 1px;text-align:left;margin-top:2.5%">
-                <div id="botones-para-compartir" style="display:inline;float:left;margin-left:4px;margin-top:0px;">
+            <div style="bottom:0px;height: 1px;text-align:left;margin-top:4.5%">
+                <div id="botones-para-compartir" style="display:inline;float:left;margin-left:4px;margin-top:10px;">
                     <span>  
                         <a class="shared" href="https://www.facebook.com/sharer/sharer.php?u=http://ccplazacentral.com/tiendas/"  target="block">    
                         <img alt="compartir en facebook" class="facebooki" height="22" src="http://4.bp.blogspot.com/-2W3Fr7nS-T0/Uh1HrkLe5wI/AAAAAAAAAiQ/0-_aC8Yici4/s1600/facebook.png" title="compartir en facebook" width="22" /></a>
