Changed Audio in video when init to 0. Deleted MouseOver and MouseOut functionality

--- a/PlazaCentral/videoHigh.html
+++ b/PlazaCentral/videoHigh.html
@@ -256,10 +256,7 @@
                 <script>
                     var playersrc;
                 </script>
-                <iframe class="yt560x315" id="JSytplayer" width="320" height="187" src="https://www.youtube.com/embed/gNyixRQH5LY?rel=0&autoplay=1&modestbranding=0&loop=1&controls=0&mute=1" onmouseover="this.src=playersrc+'=0'" onmouseout="this.src=playersrc" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
-                <script>
-                    playersrc = document.getElementById('JSytplayer').src;
-                </script>
+                <iframe class="yt560x315" id="JSytplayer" width="320" height="187" src="https://www.youtube.com/embed/gNyixRQH5LY?rel=0&autoplay=1&modestbranding=0&loop=1&controls=0&mute=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
             </div>
         </div>
         <div onclick="openUrl();">
