--- a/PlazaCentral/video.html
+++ b/PlazaCentral/video.html
@@ -61,8 +61,7 @@
         <div class="carousel-container">
 			<div style="text-align:center;">
 				<script>var playersrc;</script>
-					<iframe class="yt560x315" style="margin-top:-10px;" id="JSytplayer" width="290" height="176" src="https://www.youtube.com/embed/gNyixRQH5LY?rel=0&autoplay=1&modestbranding=0&loop=1&controls=0&mute=1" onmouseover="this.src=playersrc+'=0'" onmouseout="this.src=playersrc" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
-				<script>playersrc=document.getElementById('JSytplayer').src;</script>
+					<iframe class="yt560x315" style="margin-top:-10px;" id="JSytplayer" width="290" height="176" src="https://www.youtube.com/embed/gNyixRQH5LY?rel=0&autoplay=1&modestbranding=0&loop=1&controls=0&mute=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
 			</div>
 		</div>
 			<div class="bzm_text">
