--- a/LG/videoHigh.html
+++ b/LG/videoHigh.html
@@ -252,12 +252,7 @@
 <body class="tgx">
     <div class="tgx_wrapper carousel-wrapper size_320x480" id="cta">
         <div class="carousel-container">
-            <div style="text-align:center;">
-                <script>
-                    var playersrc;
-                </script>
-                <iframe class="yt560x315" id="JSytplayer" width="320" height="194" src="https://www.youtube.com/embed/5OjYM4BvvzQ?rel=0&autoplay=1&modestbranding=0&loop=1&controls=0&mute=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
-            </div>
+            <iframe width="320" height="180" src="https://www.youtube.com/embed/5OjYM4BvvzQ?rel=0&autoplay=1&modestbranding=0&loop=1&controls=0&mute=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
         </div>
         <div onclick="openUrl();">
         <div class="tgx_cover">
