Changed Fade font size

--- a/Tres Cielos/fade.html
+++ b/Tres Cielos/fade.html
@@ -127,17 +127,17 @@
             position: absolute;
             top: 54%;
             left: 7.5px;
-            width: 98%;
+            width: 100%;
             padding: 0.3em;
-            line-height: 1.4em;
+            line-height: 1.1em;
             color: #453936;
         }
 
         .tgx_text_title {
-            font-size: 110%;
+            font-size: 90%;
             color: #453936;
             display: inline-block;
-            width: 110%;
+            width: 90%;
             margin-bottom: -5px;
         }
 
@@ -154,7 +154,7 @@
         }
 
         .tgx_text_small {
-            font-size: 92%;
+            font-size: 60%;
         }
 
         ul {
@@ -217,7 +217,7 @@
             66.666% {
                 opacity: 0
             }
-            100% {
+                                                100% {
                 opacity: 1
             }
         }
@@ -304,7 +304,7 @@
             float: right;
             height: 30px;
             text-align: center;
-            margin-top: -25px;
+            margin-top: -43px;
             margin-right: -20px
         }
 
@@ -330,16 +330,22 @@
         </div>
         <div class="tgx_text"> 
             <span class="tgx_text_title tgx_text_bold">
-               El mejor jardín para tu boda debe ser original, espectacular e íntimo.
+              Asiste a nuestro exclusivo showroom para novios!
             </span>
             <br/>  
             <span class="tgx_text_light tgx_text_small" style="color:black;">
                 <p style="margin-right:11px;">
-                    Tres Cielos es el más completo jardín de eventos en Tequesquitengo, Morelos respaldado por más de 10 años de experiencia en la producción de eventos sociales y corporativos.
+                    ¿Planeas casarte?
+                    Este 30 de junio, asiste a nuestro showroom y conoce el lugar para la boda de tus sueños<br>
+                    -Coctel <br>
+                    -Recorridos<br>
+                    -Degustaciones<br>
+                    Jardín Tres Cielos, Tequesquitengo, Morelos, <br> ¡A menos de dos horas de la CDMX!
+                    
                 </p> 
             </span> 
             <div style="bottom:0px;height: 1px;text-align:left;margin-top:12%">
-                    <div id="botones-para-compartir" style="display:inline;float:left;margin-left:4px;margin-top:-5px;">
+                    <div id="botones-para-compartir" style="display:inline;float:left;margin-left:4px;margin-top:-20px;">
                         <span>  
                             <a class="shared" href="https://www.facebook.com/sharer/sharer.php?u=http://trescielos.mx/"  target="block">    
                             <img alt="compartir en facebook" class="facebooki" height="22" src="http://4.bp.blogspot.com/-2W3Fr7nS-T0/Uh1HrkLe5wI/AAAAAAAAAiQ/0-_aC8Yici4/s1600/facebook.png" title="compartir en facebook" width="22" /></a>
