Correccion de texto

--- a/Tres Cielos/fade.html
+++ b/Tres Cielos/fade.html
@@ -154,7 +154,7 @@
         }
 
         .tgx_text_small {
-            font-size: 60%;
+            font-size: 74%;
         }
 
         ul {
@@ -330,7 +330,7 @@
         </div>
         <div class="tgx_text"> 
             <span class="tgx_text_title tgx_text_bold">
-              Asiste a nuestro exclusivo showroom para novios!
+              ¡Asiste a nuestro exclusivo showroom para novios!
             </span>
             <br/>  
             <span class="tgx_text_light tgx_text_small" style="color:black;">
