--- a/mitsubishi/Video.html
+++ b/mitsubishi/Video.html
@@ -182,17 +182,7 @@
         <a href="http://mitsubishi-motors.com.co/modelo/outlander" style="display: block;" target="block">
 
             <div class="carousel-container">
-                <div style="text-align:center;">
-                    <script>
-                        var playersrc;
-
-                    </script>
-                    <iframe class="yt560x315" id="JSytplayer" width="290" height="176" src="https://www.youtube.com/embed/dC2uY-mFto8?rel=0&autoplay=1&modestbranding=0&loop=1&controls=0&mute=1" onmouseover="this.src=playersrc+'=0'" onmouseout="this.src=playersrc" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
-                    <script>
-                        playersrc = document.getElementById('JSytplayer').src;
-
-                    </script>
-                </div>
+                <iframe width="300" height="169" src="https://www.youtube.com/embed/dC2uY-mFto8?rel=0&autoplay=1&modestbranding=0&loop=1&controls=0&mute=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
             </div>
             <div class="bzm_text">
                 <span class="bzm_text_title  bzm_text_bold" style="color:#000; height:24px">¿Te atreves a probarlo?</span>
@@ -221,6 +211,3 @@
 
 </div>
 
-<script type="text/javascript">
-    document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banners/scripts/rmb/Adform.DHTML.js?bv='+ Math.random()) +'"><\/script>');
-</script>
