Fixed a word in title Video High Changed iframe to fix some issues with autoplay functionality

--- a/PlazaCentral/videoHigh.html
+++ b/PlazaCentral/videoHigh.html
@@ -252,12 +252,7 @@
 <body class="tgx">
     <div class="tgx_wrapper carousel-wrapper size_320x480" id="cta">
         <div class="carousel-container">
-            <div style="text-align:center;">
-                <script>
-                    var playersrc;
-                </script>
-                <iframe class="yt560x315" id="JSytplayer" width="320" height="187" src="https://www.youtube.com/embed/gNyixRQH5LY?rel=0&autoplay=1&modestbranding=0&loop=1&controls=0&mute=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
-            </div>
+            <iframe width="320" height="180" src="https://www.youtube.com/embed/gNyixRQH5LY?rel=0&autoplay=1&modestbranding=0&loop=1&controls=0&mute=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
         </div>
         <div onclick="openUrl();">
         <div class="tgx_cover">
@@ -266,10 +261,10 @@
            
         <div class="tgx_text"> 
             <span class="tgx_text_title tgx_text_bold">
-                ¿Queres probar algo DeliZioso?
+                ¿Quieres probar algo DeliZioso?
             </span>
             <span class="tgx_text_light tgx_text_small" style="color:black;">
-                <p style="margin-top: 7.5px;">Quizás aún no sea muy conocido pero en el centro comercial Plaza Central existe un concepto de gastronomía innovador y revolucionario. </p> <p style="margin-top:10px;">Se trata de una opción dual compuesta por una Plaza de Comidas y <strong>DELIZIA</strong>, un paseo de restaurantes con lo mejor de la mesa local e internacional, cuyo servicio a la mesa es impecable y especializado.</p>
+                <p style="margin-top: 7.5px;">Quizás aún no sea muy conocido pero en el centro comercial Plaza Central existe un concepto de gastronomía innovador y revolucionario. </p> <p style="margin-top:10px;">Se trata de una opción compuesta por una Plaza de Comidas y <strong>DELIZIA</strong>, un paseo de restaurantes con lo mejor de la mesa local e internacional, cuyo servicio a la mesa es impecable y especializado.</p>
             </span>
 
             <div style="bottom:0px;height: 1px;text-align:left;margin-top:4.5%">
