--- a/PlazaCentral/cube.html
+++ b/PlazaCentral/cube.html
@@ -795,7 +795,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
     <!--#i4.i20.shape.html:shape/html-->
 <div id="i20"></div>
 <!--#/#--><!--#i4.i14.text.html:text/html-->
-<div id="i14">¿Queres probar algo DeliZioso?</div>
+<div id="i14">¿Quieres probar algo DeliZioso?</div>
 <!--#/#--><!--#i4.i130.image.html:image/html-->
 <img id="i130" src="https://i.imgur.com/tZvTdRq.png"/>
 <!--#/#--><!--#i4.i181.image.html:image/html-->
@@ -809,7 +809,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
     <!--#i5.i30.shape.html:shape/html-->
 <div id="i30"></div>
 <!--#/#--><!--#i5.i24.text.html:text/html-->
-<div id="i24">¿Queres probar algo DeliZioso?</div>
+<div id="i24">¿Quieres probar algo DeliZioso?</div>
 <!--#/#--><!--#i5.i185.image.html:image/html-->
 <img id="i185" src="https://i.imgur.com/tFZeNgj.jpg"/>
 <!--#/#--><!--#i5.i193.image.html:image/html-->
@@ -823,7 +823,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
     <!--#i6.i40.shape.html:shape/html-->
 <div id="i40"></div>
 <!--#/#--><!--#i6.i34.text.html:text/html-->
-<div id="i34">¿Queres probar algo DeliZioso?</div>
+<div id="i34">¿Quieres probar algo DeliZioso?</div>
 <!--#/#--><!--#i6.i60.image.html:image/html-->
 <img id="i60" src="https://i.imgur.com/Jc3OTxv.png"/>
 <!--#/#--><!--#i6.i187.image.html:image/html-->
