--- a/PlazaCentral/video.html
+++ b/PlazaCentral/video.html
@@ -59,13 +59,10 @@
     <a href="http://ccplazacentral.com/tiendas/" style="display: block;" target="block">
 
         <div class="carousel-container">
-			<div style="text-align:center;">
-				<script>var playersrc;</script>
-					<iframe class="yt560x315" style="margin-top:-10px;" id="JSytplayer" width="290" height="176" src="https://www.youtube.com/embed/gNyixRQH5LY?rel=0&autoplay=1&modestbranding=0&loop=1&controls=0&mute=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
-			</div>
+			<iframe width="300" height="169" src="https://www.youtube.com/embed/gNyixRQH5LY?rel=0&autoplay=1&modestbranding=0&loop=1&controls=0&mute=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
 		</div>
 			<div class="bzm_text">
-				<span class="bzm_text_title  bzm_text_bold" style="color:#000;">¿Queres probar algo DeliZioso?</span>
+				<span class="bzm_text_title  bzm_text_bold" style="color:#000;">¿Quieres probar algo DeliZioso?</span>
 				
 			</div>
 
