--- a/mitsubishi/Video.html
+++ b/mitsubishi/Video.html
@@ -171,8 +171,8 @@
         float: right;
         height: 30px;
         text-align: center;
-        margin-top: -40px;
-        margin-right: 12px
+        margin-top: -45px;
+        margin-right: 20px
     }
 
 </style>
@@ -190,8 +190,8 @@
             </div>
 
             <div style="bottom:0px;height: 24px;text-align:right;margin-top:2px;">
-                <img src="https://i.imgur.com/x5ZZc1f.png" style="height:50px">
-                <div id="botones-para-compartir" style="display:inline;float:left;margin-top:-35px;margin-left: 5px">
+                <img src="https://i.imgur.com/x5ZZc1f.png" style="height:50px; margin-top: -12px">
+                <div id="botones-para-compartir" style="display:inline;float:left;margin-top:-30px;margin-left: 5px">
                     <span>  
                         <a class="shared" href="https://www.facebook.com/HuaweimobileMX/"  target="block">    
                             <img alt="Facebook" class="facebooki" height="22" src="http://4.bp.blogspot.com/-2W3Fr7nS-T0/Uh1HrkLe5wI/AAAAAAAAAiQ/0-_aC8Yici4/s1600/facebook.png" title="Facebook" width="22" />
